Add regola upwards

--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -317,6 +317,9 @@ musikisum/educandu-plugin-progression-models:
   hasS:
     en: with S
     de: mit S
+  isUpwards:
+    en: upwards
+    de: aufwärts
   cancelUpbeat:
     en: without upbeat
     de: ohne Auftakt
